--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": " node --watch server.js"
+    "dev": " node --watch server.js",
+    "start": "node server.js"
   },
   "author": "Marcos Gomes",
   "license": "ISC",
